<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView_leerXml"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/textView_leerXml"
        android:textSize="20dp"/>

 
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:orientation="horizontal"
         >

	    <Button
	        android:id="@+id/btn_xmlInternet"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_xmlInternet"
            android:textSize="15dp"/>

		<Button
	    android:id="@+id/btn_XmlLocal"
	    android:layout_width="150dp" 
	    android:layout_height="wrap_content"
	    android:text="@string/btn_xmlLocal"
        android:textSize="15dp"/>
        
    </LinearLayout>
  
    <TextView
    android:id="@+id/textView_listarSmartphones"
    android:layout_width="fill_parent"
    android:layout_height="30dp"
    android:text="@string/textView_listarSmartphones"
    android:layout_marginTop="10dp"
    android:textSize="20dp"/>
    
    <TextView
    android:id="@+id/textView_smartphonesResult"
    android:layout_width="fill_parent"
    android:layout_height="70dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:text="" />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_grabar"
            android:id="@+id/btn_grabar"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:textSize="15dp"/>

</LinearLayout>